# osm2geojson

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  conanfile.py  conanfile.txt  france_rivers_patterns.geosjon
cmake/: CompilerOptimizations.cmake  CompilerWarnings.cmake
exemple_patterns/: building_patterns.json  green_patterns.json  rivers_patterns.json  road_patterns.json
include/: bg_factory.hpp  bg_h3_interface.hpp  bg_regions_dump_handler.hpp  bg_types.hpp  bg_utils.hpp  boost_graph_eca.hpp  bpo_utils.hpp  builders.hpp  chrono.hpp  io.hpp  parse_patterns.hpp  query_osm_file.hpp  region.hpp  region_builders.hpp
include/data_types/: area.hpp  node.hpp  way.hpp
include/h3_utils/: h3_indexMap.hpp
include/io/: geojson_parser.hpp  parse_geojson.hpp  parse_patterns.hpp  print_geojson.hpp  print_hexagons_svg.hpp  print_regions_svg.hpp  print_svg.hpp  print_svg_regions.hpp  print_svg_result.hpp
include/osmium_utils/: bg_dump_handler.hpp  bg_geometry_dump_handler.hpp  bg_regions_dump_handler.hpp  filteringMultipolygonManager.hpp
src/: bg_h3_interface.cpp  bg_utils.cpp  io.cpp  osm2geojson.cpp  osm2landscape.cpp  osm2regions.cpp  osm2sorted_geojson.cpp  parse_patterns.cpp  query_osm_file.cpp  regions2landscape.cpp
src/h3_utils/: bg_h3_interface.cpp
src/io/: parse_geojson.cpp  parse_patterns.cpp  print_geojson.cpp  print_hexagons_svg.cpp  print_regions_svg.cpp  print_svg.cpp  print_svg_regions.cpp  print_svg_result.cpp
src/old/: osm_query.cpp  parse_osm_result.cpp
